--- a/app/views/spree/shared/_reviews.html.erb
+++ b/app/views/spree/shared/_reviews.html.erb
@@ -2,5 +2,5 @@
       <%= render :partial => 'spree/shared/review', :locals => {:review => review} %>
 <% end %>
 
-<%= link_to t('write_your_own_review'), new_product_review_path(@product), :class => "button",
-                :rel => "nofollow,noindex" %> 
+<%= link_to t('rate_this_product'), new_product_review_path(@product), :class => "button",
+                :rel => "nofollow,noindex" %>
