Adds avg_rating to products and presence validation to reviews

--- a/app/views/spree/shared/_review.html.erb
+++ b/app/views/spree/shared/_review.html.erb
@@ -8,6 +8,6 @@
   </span>
   <span itemprop="author"><%= review.user.email %></span>
   <div itemprop="rating">
-    <%= review.rating %>
+    <%= show_rate review.rating %>
   </div>
 </div>
