--- a/app/views/spree/reviews/new.html.erb
+++ b/app/views/spree/reviews/new.html.erb
@@ -6,6 +6,8 @@
     
     <div class="form-buttons filter-actions actions" data-hook="buttons">
       <%= button t(:send_review), 'icon-ok' %>
+      <span class="or"><%= t(:or) %></span>
+      <%= link_to_with_icon 'icon-remove', t('actions.cancel'), @review.product, :class => 'button' %>
     </div>
   </fieldset>
 <% end %>
