Adds review feedbacks

--- a/app/views/spree/shared/_review.html.erb
+++ b/app/views/spree/shared/_review.html.erb
@@ -16,4 +16,9 @@
   <div itemprop="comment">
     <%= review.comment %>
   </div>
+
+  <%= link_to "Upvote", like_product_review_path(review.product, review), method: :put %>
+  <%= "#{review.liked_count} x #{review.disliked_count}"%>
+  <%= link_to "Downvote", dislike_product_review_path(review.product, review), method: :put %>
+
 </div>
