--- a/app/views/spree/shared/_reviews.html.erb
+++ b/app/views/spree/shared/_reviews.html.erb
@@ -10,6 +10,18 @@
     <%= show_rate @product.avg_rating %>
   </div>
 
+  <% if !@product.reviews.empty? %>
+    <div class="stars_summary">
+      <ul>
+        <li><%= "5 - #{@product.rating_count 5}" %></li>
+        <li><%= "4 - #{@product.rating_count 4}" %></li>
+        <li><%= "3 - #{@product.rating_count 3}" %></li>
+        <li><%= "2 - #{@product.rating_count 2}" %></li>
+        <li><%= "1 - #{@product.rating_count 1}" %></li>
+      </ul>
+    </div>
+  <% end %>
+
   <% for review in @product.reviews %>
         <%= render :partial => 'spree/shared/review', :locals => {:review => review} %>
   <% end %>
