--- a/app/views/spree/reviews/_form.html.erb
+++ b/app/views/spree/reviews/_form.html.erb
@@ -1,7 +1,4 @@
-<% content_for :head do %>
-  <%= stylesheet_link_tag 'store/rateit' %>
-  <%= javascript_include_tag "store/jquery.rateit.min.js" %>
-<% end %>
+<%= render "spree/shared/rateit_head", :target => @review %>
 
 <%= render "spree/shared/error_messages", :target => @review %>
 
